2016-07-24  Keith Marshall  <keithmarshall@users.sourceforge.net>

	Optimize printf() field width accumulation function.

	* mingwex/stdio/pformat.c (__imul10plus): Omit multiply by ten on
	already accumulated zero total; it is unnecessary, since ten times
	zero is still zero.

2016-07-22  Keith Marshall  <keithmarshall@users.sourceforge.net>

	Fix printf() field width parsing regression issue [#2309].

	* mingwex/stdio/pformat.c (__imul10plus): Coerce any accumulated
	negative total to zero; the only negative value to be handled is...
	(PFORMAT_IGNORE): ...this; it ceases to be applicable, on first call
	to __imul10plus(), to accumulate field width or precision.

2016-07-17  Keith Marshall  <keithmarshall@users.sourceforge.net>

	Correct source package omission of msvcrt-xref subdirectory.

	* Makefile.in (mingwrt-srcdist-files): Add msvcrt-xref.

2016-07-14  Keith Marshall  <keithmarshall@users.sourceforge.net>

	Prepare and tag all files for release of mingwrt-3.22.

	* configure.ac (AC_INIT): Adjust package version number.

2016-07-14  Keith Marshall  <keithmarshall@users.sourceforge.net>

	Preserve kludge to evade GCC build failure on S_ISBLK misuse.

	* include/sys/stat.h (_NO_UNSUPPORTED): New feature test macro; it
	should be user defined, if desired, before inclusion; leave undefined.
	[!_S_IFBLK && !_NO_UNSUPPORTED && !_NO_OLDNAMES] (S_ISBLK): Define it,
	as appropriate for POSIX conforming usage; do not poison it.

2016-07-10  Keith Marshall  <keithmarshall@users.sourceforge.net>

	Fix C++ strict type checking inconsistency in <glob.h>

	* include/glob.h (__ERRFUNC_P): New private macro; define it to match
	the type signature of the error function pointer, to be passed to...
	(glob): ...this function; use it to correctly represent error function
	pointer argument in inline implementation.

2016-07-09  Keith Marshall  <keithmarshall@users.sourceforge.net>

	Factor out <ctype.h> vs. <wctype.h> duplicate elements.
